devops/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: develop
---
apiVersion: v1
kind: Namespace
metadata:
  name: preprod
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
