devops/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ec-deployment
spec:
  selector:
    matchLabels:
      app: ec-k8s
  replicas: 3
  template:
    metadata:
      labels:
        app: ec-k8s
    spec:
      containers:
        - name: ec-k8s-container
          image: hichamouja99/ec:4.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ec-svc
spec:
  selector:
    app: ec-k8s
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ec-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ec-svc
                port:
                  number: 80
