devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ec-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: google.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ec-svc
                port:
                  number: 3000
